[metadata]
name = image_classification
version = 0.0.1

[options]
packages = image_classification


install_requires = 
    click
    python-dotenv

    # data science
    numpy
    scipy

    # text utils
    ftfy

    # deep learning
    torch
    torchvision
    diffusers
    transformers

    # Web app
    gradio