[metadata]
name = stable_diffusion
version = 0.0.1

[options]
packages = stable_diffusion


install_requires = 
    click
    python-dotenv

    # data science
    numpy
    scipy

    # text utils
    ftfy

    # deep learning
    torch
    torchvision
    diffusers
    transformers

    # Web app
    gradio