[metadata]
name = stable_diffusion
version = 0.0.2

[options]
packages = stable_diffusion


install_requires = 
    click
    python-dotenv

    # data science
    numpy
    scipy

    # text utils
    ftfy

    # deep learning
    torch
    torchvision
    diffusers >= 0.3
    transformers

    # Web app
    gradio >= 3.4